"Fixed" jumping footer after waiting for content done

--- a/src/_less/fancy.less
+++ b/src/_less/fancy.less
@@ -122,6 +122,12 @@ a.badge:active
 
 
 // Waiting for content
+.waiting-padding
+{
+	height: 1px;
+	width: 0;
+	display: block !important;
+}
 .waiting
 {
 	margin: auto;
@@ -151,14 +157,10 @@ a.badge:active
 		animation-delay: -0.16s;
 	}
 }
-
-
-
 @-webkit-keyframes sk-bouncedelay {
   0%, 80%, 100% { -webkit-transform: scale(0) }
   40% { -webkit-transform: scale(1.0) }
 }
-
 @keyframes sk-bouncedelay {
   0%, 80%, 100% { 
 	-webkit-transform: scale(0);
